--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,6 +48,8 @@
                             <include>org.jdom:jdom2:*</include>
                             <include>net.kyori:text-*:*</include>
                             <include>app.ashcon.intake:intake-*:*</include>
+                            <include>org.eclipse.jgit:org.eclipse.jgit:*</include>
+                            <include>org.slf4j:slf4j-api:*</include>
                         </includes>
                     </artifactSet>
                     <filters>
@@ -71,6 +73,14 @@
                             <pattern>org.jdom2</pattern>
                             <shadedPattern>tc.oc.pgm.lib.org.jdom2</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>org.eclipse.jgit</pattern>
+                            <shadedPattern>tc.oc.pgm.lib.org.eclipse.jgit</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.slf4j</pattern>
+                            <shadedPattern>tc.oc.pgm.lib.org.slf4j</shadedPattern>
+                        </relocation>
                     </relocations>
                 </configuration>
                 <executions>
@@ -83,23 +93,10 @@
                 </executions>
             </plugin>
 
-            <!-- Generate a .zip resource of default maps provided in the maps/ folder -->
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.8</version>
                 <executions>
-                    <execution>
-                        <id>maps</id>
-                        <phase>generate-resources</phase>
-                        <configuration>
-                            <tasks>
-                                <zip basedir="../maps/" destfile="${basedir}/src/main/resources/maps.zip"/>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
                     <execution>
                         <id>jar</id>
                         <phase>package</phase>
