--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 
     <distributionManagement>
         <repository>
-            <id>ashcon.repo</id>
+            <id>ashcon.app</id>
             <url>https://repo.ashcon.app/content/repositories/snapshots</url>
         </repository>
     </distributionManagement>
