Make implementation consistent
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -140,7 +140,7 @@ groups:
   mapmaker:
     prefix: "&9*"
     permissions:
-      - "pgm.premium"
+      - "+pgm.premium"
 
 # Enables "community mode" with features such as /report, /freeze, /warn, and /ban.
 community:
