--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -25,9 +25,9 @@ map:
     #    folders:
     #    - "tournament"
     #
-    # To disable the default maps, remove the repository below.
-    - uri: "https://github.com/PGMDev/Maps"
-      path: "maps-default"
+    # To enable the default maps, uncomment the repository below.
+    # - uri: "https://github.com/PGMDev/Maps"
+    #  path: "maps-default"
 
   # A path to a map pools file, or empty to disable map pools.
   pools: "map-pools.yml"
