--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -63,7 +63,8 @@ join:
 
 # Changes various gameplay mechanics.
 gameplay:
-  refill-wool: true # Should wool in wool rooms be automatically refilled?
+  refill-wool: true              # Should wool in wool rooms be automatically refilled?
+  global-legacy-flag-beams: true # Should everyone see legacy flag beams?
 
 # Toggles various user interfaces.
 ui:
