--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>us.myles</groupId>
             <artifactId>viaversion</artifactId>
-            <version>2.2.2</version>
+            <version>3.0.2-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
