--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -73,6 +73,7 @@ ui:
   proximity: false # Should the proximity of objectives be visible?
   fireworks: true  # Spawn fireworks after objectives are completed?
   participants-see-observers: true # Can participants see observers in the tab list?
+  flag-beams: false # Should everyone see floating wool flag beams?
 
 # Overrides the header and footer of the side bar.
 sidebar:
