--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -64,6 +64,7 @@ join:
 # Changes various gameplay mechanics.
 gameplay:
   refill-wool: true # Should wool in wool rooms be automatically refilled?
+  grief-score: -10 # Score under which players should be kept out of the match
 
 # Toggles various user interfaces.
 ui:
