--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -108,9 +108,25 @@ groups:
   # A special group for server operators.
   op:
     prefix: "&6❖"
+    suffix: ""
+    # Display name of the group - Displayed when hovering over prefix/suffix              
+    display-name: "&6Server Operator"
+    # Description of group - Displayed when hovering over prefix/suffix
+    description: "&7Administrator of the server"
+    # URL shown below description when hovering over prefix/suffix
+    click-link: "https://pgm.dev/"
+    
+    # If you want to further customize prefix/suffix flairs, provide components here to override format
+    # Only use if you know what you're doing
+    prefix-component: ""
+    suffix-component: ""
 
   # customgroup:
   #   prefix: ""
+  #   suffix: ""
+  #   display-name: ""
+  #   description: ""
+  #   click-link: ""
   #   permissions:
   #    - "+pgm.premium"
   #   observer-permissions: []
