--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -65,6 +65,7 @@ join:
 gameplay:
   refill-wool: true # Should wool in wool rooms be automatically refilled?
   grief-score: -10 # Score under which players should be kept out of the match
+  death-tick: 15 # how long should the death animation be shown for?
 
 # Toggles various user interfaces.
 ui:
