--- a/core/src/main/resources/map-pools.yml
+++ b/core/src/main/resources/map-pools.yml
@@ -24,7 +24,7 @@ pools:
     players: 1
 
     # A list of map names in this pool.
-    # Uses map name given in map.xml, do not use folder name
+    # Uses map name given in map.xml, do not use folder name.
     # Names are case-sensitive.
     maps:
       - Airship Battle
