Rework stats and allow showing own stats
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -76,6 +76,10 @@ ui:
   participants-see-observers: true # Can participants see observers in the tab list?
   flag-beams: false # Should everyone see floating wool flag beams?
   verbose-stats: false # Enable more thorough stats at the end of each match
+  stats:
+    show-after: 120 # Ticks to wait to show stats
+    shown-high: true # Should the leaderboards show
+    show-own: true   # Should your own stats show
 
 # Overrides the header and footer of the side bar.
 sidebar:
