Add queued restart countdown time config option
Signed-off-by: Pugzy <pugzy@mail.com>

--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -44,6 +44,7 @@ countdown:
   start: "30s"    # After a match cycles or /start
   cycle: "30s"    # After a match ends or /cycle
   huddle: -1      # Before a match starts (only recommended for "ranked" matches)
+  restart: "30s"  # After a restart countdown is queued or /qr
 
 # Sets thresholds for when to restart the server.
 #
