--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             </exclusions>
         </dependency>
 
+        <!-- This is not in spigot, but it is in sportpaper -->
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>8.1.0</version>
+        </dependency>
+
         <!-- XML parsing library used for all "map.xml" configuration loading -->
         <dependency>
             <groupId>org.jdom</groupId>
