Update TODO comment
Signed-off-by: cswhite2000 <18whitechristop@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 
     <dependencies>
         <!-- Fork of Spigot and SportBukkit running Minecraft 1.8 -->
-        <!-- TODO: support non-1.8 and non-SportPaper Bukkit servers -->
+        <!-- TODO: support non-1.8 Bukkit servers -->
         <dependency>
             <groupId>app.ashcon</groupId>
             <artifactId>sportpaper</artifactId>
