Add per-pool cycle times * Allow each map pool to define a custom cycle-time. When none is set or the duration is negative, pools will default to what is defined in config.yml
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/core/src/main/resources/map-pools.yml
+++ b/core/src/main/resources/map-pools.yml
@@ -22,6 +22,9 @@ pools:
     # on the server reaches the "players" threshold.
     dynamic: true
     players: 1
+    
+    # How long should should a map cycle last?
+    cycle-time: "15s"
 
     # A list of map names in this pool.
     # Uses map name given in map.xml, do not use folder name.
