Add spigot repo to resolve build issues
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,15 @@
         <repository>
             <id>ashcon.app</id>
             <url>https://repo.ashcon.app/content/repositories/snapshots</url>
-        </repository>
+        </repository>        
         <repository>
             <id>sonatype-oss</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
+        <repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
     </repositories>
 
     <distributionManagement>
