Migrate to exp4j library
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.13.0.202109080827-r</version>
         </dependency>
+
+        <!-- Simple mathematical expression evaluator library -->
+        <dependency>
+            <groupId>net.objecthunter</groupId>
+            <artifactId>exp4j</artifactId>
+            <version>0.4.8</version>
+        </dependency>
     </dependencies>
 
     <build>
