Fix required dependency not being shaded
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -52,6 +52,7 @@
                             <include>org.eclipse.jgit:org.eclipse.jgit:*</include>
                             <include>org.slf4j:slf4j-api:*</include>
                             <include>fr.minuskube.inv:smart-invs</include>
+                            <include>net.objecthunter:exp4j:*</include>
                         </includes>
                     </artifactSet>
                     <filters>
