--- a/pom.xml
+++ b/pom.xml
@@ -40,25 +40,24 @@
 
     <repositories>
         <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io/</url>
-        </repository>
-        <repository>
-            <id>viaversion.com</id>
-            <url>https://repo.viaversion.com/</url>
-        </repository>
-        <!-- TODO: move SportPaper to jitpack.io -->
-        <repository>
-            <id>ashcon.app</id>
-            <url>https://repo.ashcon.app/content/repositories/snapshots</url>
-        </repository>        
-        <repository>
             <id>sonatype-oss</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>viaversion.com</id>
+            <url>https://repo.viaversion.com/</url>
+        </repository>
+        <repository>
+            <id>ashcon.app</id>
+            <url>https://repo.ashcon.app/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io/</url>
         </repository>
     </repositories>
 
@@ -135,7 +134,7 @@
         <dependency>
             <groupId>app.ashcon.intake</groupId>
             <artifactId>intake-bukkit</artifactId>
-            <version>v1.2.1</version>
+            <version>1.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
@@ -155,18 +154,12 @@
             <scope>compile</scope>
         </dependency>	
 
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.9.1</version>
-            <scope>test</scope>
-        </dependency>
-
         <!-- Git library for cloning and pulling repositories -->
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.13.1.202206130422-r</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Simple mathematical expression evaluator library -->
@@ -174,6 +167,14 @@
             <groupId>net.objecthunter</groupId>
             <artifactId>exp4j</artifactId>
             <version>0.4.8</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
