--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,10 @@
             <id>ashcon.app</id>
             <url>https://repo.ashcon.app/content/repositories/snapshots</url>
         </repository>
+        <repository> <!-- Holds current build of cloud with fixes for PGM -->
+            <id>pgm.fyi</id>
+            <url>https://repo.pgm.fyi/snapshots</url>
+        </repository>
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io/</url>
@@ -130,28 +134,31 @@
         </dependency>
 
         <!-- Framework for defining and parsing commands -->
+        <!-- Version 1.8.0-pgm includes fixes/features not yet in upstream. To be changed when merged. -->
+        <!-- Source: https://github.com/Pablete1234/cloud/commits/1.8.0-pgm -->
+        <!-- Repo: https://repo.pgm.fyi/#/snapshots/cloud/commandframework -->
         <dependency>
             <groupId>cloud.commandframework</groupId>
             <artifactId>cloud-core</artifactId>
-            <version>1.7.1</version>
+            <version>1.8.0-pgm-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cloud.commandframework</groupId>
             <artifactId>cloud-annotations</artifactId>
-            <version>1.7.1</version>
+            <version>1.8.0-pgm-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cloud.commandframework</groupId>
             <artifactId>cloud-paper</artifactId>
-            <version>1.7.1</version>
+            <version>1.8.0-pgm-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cloud.commandframework</groupId>
             <artifactId>cloud-minecraft-extras</artifactId>
-            <version>1.7.1</version>
+            <version>1.8.0-pgm-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <!-- Allows registering brigadier mappings -->
