--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -180,13 +180,6 @@ groups:
     permissions:
       - "+pgm.premium"
 
-# Enables "community mode" with features such as /report, /freeze, /warn, and /ban.
-community:
-  enabled: true   # Is community mode enabled?
-  server-name: "" # Name of your server, displayed when players are kicked.
-  rules-link: ""  # A URL to a rules website, displayed when players are kicked.
-  appeal-msg: ""  # A message, displayed on the kick screen, if a player is banned.
-
 # Overrides the default database uri.
 #
 # Only SQLite and MySQL-compatible databases officially supported.
@@ -198,6 +191,9 @@ database-uri: ""
 
 # Maximum connections a database will establish
 database-max-connections: 5
+
+# Enable the simple vanish manager, disable if you want other plugins to handle this
+vanish: true
 
 # Experimental features that are not yet stable.
 experiments:
