--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,9 +8,9 @@
 
     <parent>
         <relativePath>../pom.xml</relativePath>
-        <version>0.15-SNAPSHOT</version>
+        <version>0.16-SNAPSHOT</version>
         <groupId>tc.oc.pgm</groupId>
-        <artifactId>PGM</artifactId>
+        <artifactId>pgm</artifactId>
     </parent>
 
     <name>Core</name>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>tc.oc.pgm</groupId>
             <artifactId>util</artifactId>
-            <version>0.15-SNAPSHOT</version>
+            <version>0.16-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
