--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,40 @@
-name: deploy
+name: Deploy
 on:
   push:
     branches:
       - dev
-  repository_dispatch:
+  workflow_dispatch:
 jobs:
   deploy:
+    permissions:
+      contents: read
+      packages: write
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
+    - id: checkout
+      name: Checkout
       uses: actions/checkout@v3
-    - name: setup
+    - id: setup-java
+      name: Setup Java
       uses: actions/setup-java@v3
       with:
         java-version: 8
-        distribution: adopt
-    - name: cache
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: nexus
-      run: mvn deploy -s settings.xml
+        distribution: temurin
+        cache: maven
+    - id: deploy
+      name: Deploy Jar
+      run: mvn --batch-mode deploy
       env:
-        NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-        NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-    - name: artifact
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - id: artifact
+      name: Upload Jar
       uses: actions/upload-artifact@v3
       with:
         name: PGM.jar
         path: target/PGM.jar
         if-no-files-found: error
-    - name: docker
+    - id: docker
+      name: Deploy Docker
       run: |
         mvn -pl server compile jib:build \
           -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} \
