Swap OpenJDK 8 Docker image for server image
Closes #1172

Signed-off-by: BT (calcastor/mame) <43831917+calcastor@users.noreply.github.com>

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -116,7 +116,7 @@
                 <version>3.3.1</version>
                 <configuration>
                     <from>
-                        <image>shipilev/openjdk-shenandoah:8</image>
+                        <image>shipilev/openjdk:8</image>
                     </from>
                     <to>
                         <image>pgm</image>
